--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ringcentral/sdk": "^4.1.0",
     "@ringcentral/subscriptions": "^4.1.0",
+    "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
-    "node-localstorage": "^2.1.6"
+    "node-localstorage": "^2.1.6",
+    "redis": "^3.0.2"
   }
 }
